--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -10,12 +10,12 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="199" />
-    <meta property="og:description" content="年薪:60萬+ ; 每週工時:40小時- ; 週休 3 日; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，以利人們作對的事;" />
+    <meta property="og:description" content="年薪:60萬+ ; 每週工時:40小時- ; 週休 3 日; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，求解後供人們作對的事;" />
 
     <title>到 何六百(南投埔里)工作(徵1~2人)</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="年薪:60萬+ ; 每週工時:40小時- ; 週休 3 日; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，以利人們作對的事;">
+    <meta name="description" content="年薪:60萬+ ; 每週工時:40小時- ; 週休 3 日; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，求解後供人們作對的事;">
     <meta name="keywords" content="專業營建管理,Professional Construction Management,系統管理,System Administration,網頁程式設計,Web Programming,Python,Django,PostgreSQL,MySQL,Ubuntu Linux,jQuery,Javascript,HTML,Amazon Web Service,Google App Engine">
     <meta name="author" content="ho600 Ltd.">
 
@@ -329,13 +329,13 @@
                         <li>AWS: EC2/S3/CloudFront/RDS/VPC/Route 53/IAM/SES/SNS/Lambda/API Gateway/DynamoDB</li>
                         <li>GAE: Python</li>
                         <li>Ubuntu Linux</li>
+                        <li>pfSense OS: OpenVPN/IPSec</li>
                         <li>NGINX</li>
                         <li>uWSGI</li>
-                        <li>OpenVPN</li>
                         <li>PostgreSQL</li>
                         <li>Jenkins / Buildbot</li>
                         <li>Python2 + Django + south + tastypei + guardian + mediagenerator + virtualenv</li>
-                        <li>hg / git</li>
+                        <li>git / hg</li>
                         <li>GnuPG</li>
                         <li>HTML / CSS</li>
                         <li>Bootstrap</li>
@@ -364,15 +364,15 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-center">彈性工時</h2>
-					<p>依 104 年 06 月 03 日修正之新版勞基法<a href="http://law.moj.gov.tw/LawClass/LawSingle.aspx?Pcode=N0030001&FLNO=30">第 30 條</a>規定，敝公司之員工工作時數如下：
-					<ul class="p">
-						<li>每週上班日為週一至週四，上班日遇國定假日即改休假日</li>
-						<li>每天上班時數為 10 小時，上班彈性打卡時間為早上 6 點至 8 點，下班彈性打卡時間為晚上 6 點至 8 點，期間有 2 個小時的休息時間。打卡地點則為敝公司辦公室</li>
-						<li><strong>每一員工在經適當培訓後皆需參與系統管理的輪班工作</strong>，輪班方式為隨身攜帶值班手機，當代管系統有誤時，從收到警告簡訊起計時，須在 1 小時以內時間進辦公室處理，此時的輪班員工即為緊急排難專案的專案經理，有權責指定相關員工協助處理。若緊急排難專案的起迄時間包含非上班時間，專案所有參與者在非上班時間的工作時數皆列入加班時數</li>
-						<li>輪班員工當週工時為 36 小時，值班時間若無系統錯誤，也無須補足 40 小時</li>
-						<li>員工數(不含董事)未達 2 人時，董事始參與輪班</li>
-						<li>每次輪班人數限 1 人，輪班時間固定為一週，期間遇國定假日仍須值班。交接時間為每週一下午 2 點，交接日如遇國定假日，則交接給董事，董事則在假日結束後的第一個上班日交接給原排定輪班之員工</li>
-					</ul>
+                    <p>依 104 年 12 月 16 日修正之新版勞基法<a href="http://law.moj.gov.tw/LawClass/LawSingle.aspx?Pcode=N0030001&FLNO=30">第 30 條</a>規定，敝公司之員工工作時數如下：
+                    <ul class="p">
+                        <li>每週上班日為週一至週四，上班日遇國定假日即改休假日</li>
+                        <li>每天正常上班時數上限為 10 小時，上班彈性打卡時間為早上 6 點至 8 點，下班彈性打卡時間為晚上 6 點至 8 點，期間有 2 個小時的休息時間。打卡地點則為敝公司辦公室</li>
+                        <li><strong>每一員工在經適當培訓後皆需參與系統管理的輪班工作</strong>，輪班方式為隨身攜帶值班手機，當代管系統有誤時，從收到警告簡訊起計時，須在 1 小時以內時間進辦公室處理，此時的輪班員工即為緊急排難專案的專案經理，有權責指定相關員工協助處理。若緊急排難專案的起迄時間包含非上班時間，專案所有參與者在非上班時間的工作時數皆列入加班時數，當日總工時不受 10 小時限制</li>
+                        <li>輪班員工當週工時為 36 小時，值班時間若無系統錯誤，也無須補足 40 小時</li>
+                        <li>員工數(不含董事)未達 2 人時，董事始參與輪班</li>
+                        <li>每次輪班人數限 1 人，輪班時間固定為一週，期間遇國定假日仍須值班。交接時間為每週一下午 2 點，交接日如遇國定假日，則交接給董事，董事則在假日結束後的第一個上班日交接給原排定輪班之員工</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -384,6 +384,10 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-center">公司願景</h2>
                     <p>
+                        為滿足創辦人無法擔任律師的幻想，所以極度希望把本公司經營得像律師事務所一樣，收費照工作時數計算，每一位客戶就是一件獨立的專案，雖然喜愛開放原始碼，但也會對每一位客戶的營業秘密守口如瓶。
+                    </p>
+                    <p>
+                        上述是一種偏執的幻想，不符學習型組織的共同願景勾勒方法。須待員工進來後，我們來共同討論。本段目前請視為空白。
                     </p>
                 </div>
             </div>
@@ -440,20 +444,20 @@
                         <li>
                             筆試為分次出題，題目總共有 8 題，考題沒有範圍，每題也只有一次答題機會，出題速度依據應聘人的答題品質而定，愈高者出題愈快。其中必出的 3 題如下：
                             <ol class="p">
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>數學題。欲知考題，可到下方「立即求職」先登記個人信箱</li>
+                                <li>數學題。欲知考題，可到下方「立即求職」先登記個人信箱</li>
+                                <li>數學題。欲知考題，可到下方「立即求職」先登記個人信箱</li>
                             </ol>
                             如未答滿 8 題，卻又遲遲未接到新的題目，意謂考試委員<span class="text-danger">十分不滿意</span>您的答案，選擇無限期停問，請勿來信詢問或是催促出題。敝公司開發的筆試網站，保證應聘人必定會拿到試題(前提是您要登入筆試網站)，如未拿到試題，考試委員會接到系統警告，於此，您久久未拿到試題，<span class="text-danger">絕對</span>是考試委員認定您目前的資質不好，請再多自學一陣子，之後再來應聘，反正<span class="text-danger">考試委員也不會知道您的新帳號是與之前那個舊帳號一樣</span>
                         </li>
                         <li>
-                            在考試委員接受您的第 8 題答案後，即會與您約定電談時間(最多 1 小時)，若為聽障或語障者(以身心障礙手冊認定)，則使用 Skype/FB Message/Google Hangout/Line 其中一項工具以打字方式考試
+                            在考試委員接受您的第 8 題答案後，即會與您約定電談時間(最多 1 小時)，若為聽障或語障者(以身心障礙手冊認定)，則使用 Skype/FB Message/Google Hangout/Line/... 等即時對談工具，以打字方式考試
                         </li>
                         <li>
-                            電談/字談未通過者，會儘早通知。而通過者，則約定面試時間(最多 2 小時)，會補助本島部份的交通費，採實報實銷，上限 2,000 元，回程票據須請面試者掛號寄回。面試者為下肢障者(以身心障礙手冊認定)此時須告知，方便敞公司整理面試環境。<span class="text-danger">面試時，須繳交對應 md5 驗證碼的身份證正本，當面驗完立即歸還</span>
+                            電談/字談未通過者，會儘早通知。而通過者，則約定面試時間(最多 2 小時)，會補助本島部份的交通費，採實報實銷，上限 2,000 元，回程票據須請面試者掛號寄回。面試者為下肢障者(以身心障礙手冊認定)此時須告知，方便敞公司整理面試環境。<span class="text-danger">面試時，須繳交對應前述 14 碼 md5 驗證碼的身份證正本，當面驗完立即歸還</span>
                         </li>
                         <li>
-                            面試未通過者，會儘早通知。而通過者，再約定實地實習時間，連續 4 個日曆天，每天薪資以 3,000 元計(以銀行轉帳支付)，享勞健保，供食宿
+                            面試未通過者，會儘早通知。而通過者，再約定實地實習時間，連續 4 個日曆天，每天薪資以 3,000 元計(以銀行轉帳支付至面試者擁有帳戶)，享勞健保，供食宿
                         </li>
                         <li>
                             實地實習未通過者，會儘早通知。而通過者即進入員工聘雇程序
