--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -21,9 +21,9 @@
 
     <link rel="shortcut icon" href="/favicon.ico" />
     <!-- Bootstrap Core CSS -->
-    <link href="statics/grayscale/css/bootstrap.min.css?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}" rel="stylesheet">
+    <link href="statics/grayscale/css/bootstrap.min.css?v=${BUILD_NUMBER}-${REVISION}" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="statics/grayscale/css/grayscale.css?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}" rel="stylesheet">
+    <link href="statics/grayscale/css/grayscale.css?v=${BUILD_NUMBER}-${REVISION}" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="statics/grayscale/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!--
@@ -536,29 +536,29 @@ s.setAttribute('data-timestamp', +new Date());
         <div class="container text-center">
             <p>Copyright &copy; <span id="copyright_year">2015</span> <strong><a href="https://www.ho600.com/">ho600 Ltd.</a></strong><br/>
                 No.42-7, Dongrun Rd., Puli Township, Nantou County 54557, Taiwan (R.O.C.) <br/>
-                <span id="build_version">Deploy Time: ${BUILD_TIME} with ${BUILD_NUMBER}-<a href="https://bitbucket.org/ho600/jobs-ho600-com/commits/${MERCURIAL_REVISION}">${MERCURIAL_REVISION}</a></span>
+                <span id="build_version">Deploy Time: ${BUILD_TIME} with ${BUILD_NUMBER}-<a href="https://bitbucket.org/ho600/jobs-ho600-com/commits/${REVISION}">${REVISION}</a></span>
             </p>
         </div>
     </footer>
     <!-- jQuery Version 1.11.0 -->
     <script src="statics/grayscale/js/jquery-1.11.0.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="statics/grayscale/js/bootstrap.min.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
+    <script src="statics/grayscale/js/bootstrap.min.js?v=${BUILD_NUMBER}-${REVISION}"></script>
     <!-- Plugin JavaScript -->
-    <script src="statics/grayscale/js/jquery.easing.min.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script src="statics/grayscale/js/grayscale.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
+    <script src="statics/grayscale/js/jquery.easing.min.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script src="statics/grayscale/js/grayscale.js?v=${BUILD_NUMBER}-${REVISION}"></script>
     <script src="statics/modernizr.custom.82028.js"></script>
-    <script src="statics/raphael/raphael-min.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script src="statics/raphael/g.raphael-min.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script src="statics/raphael/g.line-min.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script src="statics/raphael/font.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script src="statics/webkit.base64.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script type="text/javascript" src="statics/canvg/rgbcolor.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script type="text/javascript" src="statics/canvg/canvg.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script type="text/javascript" src="statics/base64.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script type="text/javascript" src="statics/canvas2image.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}"></script>
-    <script type="text/javascript" src='statics/jquery.blockUI.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}'></script>
-    <script type="text/javascript" src='statics/jobs.js?v=${BUILD_NUMBER}-${MERCURIAL_REVISION}'></script>
+    <script src="statics/raphael/raphael-min.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script src="statics/raphael/g.raphael-min.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script src="statics/raphael/g.line-min.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script src="statics/raphael/font.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script src="statics/webkit.base64.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script type="text/javascript" src="statics/canvg/rgbcolor.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script type="text/javascript" src="statics/canvg/canvg.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script type="text/javascript" src="statics/base64.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script type="text/javascript" src="statics/canvas2image.js?v=${BUILD_NUMBER}-${REVISION}"></script>
+    <script type="text/javascript" src='statics/jquery.blockUI.js?v=${BUILD_NUMBER}-${REVISION}'></script>
+    <script type="text/javascript" src='statics/jobs.js?v=${BUILD_NUMBER}-${REVISION}'></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
