add messages for sending exam.

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -495,6 +495,20 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-center">FAQ</h2>
+                    <ol class="p">
+                        <li>
+                            <ul class="p" style="list-style: none;">
+                                <li>Q: 本站內容會不會改變?</li>
+                                <li>A: 會，本公司所處的邊際條件也是一直在變的。像是勞基法彈性工時部份，法變了，我們就得因應。</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="p" style="list-style: none;">
+                                <li>Q: 另如果邊際條件不變，那內容也會變嗎?</li>
+                                <li>A: 會，創辦人說話的保證效力保證低於美國國債，其 AA+ 等級的五年違約機率約為 0.166 %，創辦人自認無法比它還低。</li>
+                            </ul>
+                        </li>
+                    </ol>
                 </div>
             </div>
         </div>
