Add promo information

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -82,16 +82,19 @@
                         <a class="page-scroll" href="/#limit">招募限制</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#flow">招募流程</a>
+                        <a class="page-scroll" href="/#flow">流程</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#apply">立即求職</a>
+                        <a class="page-scroll" href="/#apply">求職</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#promo">抽獎</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/#faq">FAQ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#question">提出問題</a>
+                        <a class="page-scroll" href="/#question">詢問</a>
                     </li>
                 </ul>
             </div>
@@ -445,7 +448,7 @@
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2 class="text-center">招募流程</h2>
+                    <h2 class="text-center">流程</h2>
                     <ul class="p">
                         <li>在本網站申請應聘帳號</li>
                         <li>以該帳號生成 PGP 公私錀，效期需在 360 天以上、 1440 天以下。並妥善保管私錀，因私錀洩露致使筆試成績有誤，恕無法更正。效期即最長答題時間，超過者須重新申請應聘帳號</li>
@@ -483,7 +486,7 @@
     <section id="apply" class="container content-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="text-center">立即求職</h2>
+                <h2 class="text-center">求職</h2>
                 <p class="text-danger">
                     筆試網站建構中，請耐心等候，先留個 Email ，上線後立即通知。
                 </p>
@@ -500,7 +503,20 @@
         </div>
     </section>
 
-    <section id="faq" class="container reverse-section text-left">
+    <section id="promo" class="container reverse-section text-left">
+        <div class="row">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2 class="text-center">抽獎</h2>
+                    <p>
+                        您也可以分享本網站資訊以贏得 iPhone 7+ 或 Macbook pro 等 3C 商品大獎。詳情請至 <a href="https://promo-jobs.ho600.com/">https://promo-jobs.ho600.com/</a> 了解。
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="faq" class="container content-section text-left">
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
@@ -523,12 +539,11 @@
             </div>
         </div>
     </section>
-
     <section id="question" class="container content-section text-left">
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2 class="text-center">提出問題</h2>
+                    <h2 class="text-center">詢問</h2>
 <div id="disqus_thread"></div>
 <script>
 /**
