Added loading.gif; remove unuseful lines.

--- a/promo-jobs-ho600-com/index.html
+++ b/promo-jobs-ho600-com/index.html
@@ -175,7 +175,7 @@ s.setAttribute('data-timestamp', +new Date());
     <script src="statics/grayscale/js/jquery.easing.min.js?v=${BUILD_NUMBER}-${REVISION}"></script>
     <script src="statics/grayscale/js/grayscale.js?v=${BUILD_NUMBER}-${REVISION}"></script>
     <script type="text/javascript" src='statics/jquery.blockUI.js?v=${BUILD_NUMBER}-${REVISION}'></script>
-    <script type="text/javascript" src='statics/jobs.js?v=${BUILD_NUMBER}-${REVISION}'></script>
+    <script type="text/javascript" src='statics/promo-jobs.js?v=${BUILD_NUMBER}-${REVISION}'></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
