ignore promo section temporarily; add a floating salary type; add exam milestone

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -97,9 +97,6 @@
                         <a class="page-scroll" href="/#apply">求職</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#promo">抽獎</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="/#faq">FAQ</a>
                     </li>
                     <li>
@@ -276,6 +273,9 @@
                         </tr>
                     </tbody>
                 </table>
+                <p>
+                    薪資有兩種發放方式，預設的第一種是每月固定 40,600 元，一路發到離職為止。若是覺得沒挑戰性，那也可以選擇第一個月發 35,600 元，之後再依表現，可晉升至 40,600 元或是 45,600 元。
+                </p>
                 <p>
                     一般企業常見的生日禮金、三節禮金、員工旅遊、尾牙抽獎都<span class="text-danger">不會有</span>，主要原因是敝公司不是「<strong>一般企業</strong>」，而次要原因如下：
                 </p>
@@ -497,7 +497,13 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="text-center">求職</h2>
                 <p class="text-danger">
-                    筆試網站建構中，請耐心等候，先留個 Email ，上線後立即通知。
+                    為讓大部份求職者處於公平競爭狀態，請先留個 Email ，並依下列時程收信：
+                    <ol class="p">
+                        <li>預計 2016/12/09 公佈第一題考題</li>
+                        <li>預計 2016/12/16 公佈第二題考題</li>
+                        <li>預計 2016/12/23 公佈第三題考題</li>
+                        <li>預計 2016/12/24 且登記信箱數達 30 個以上，公佈筆試網站，正式招考</li>
+                    </ol>
                 </p>
                 <noscript>請啟用您的 javascript 功能，以便留下 E-mail 。</noscript>
                 <form class="form-inline my_form">
@@ -512,20 +518,7 @@
         </div>
     </section>
 
-    <section id="promo" class="container reverse-section text-left">
-        <div class="row">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2 class="text-center">抽獎</h2>
-                    <p>
-                        您也可以分享本網站資訊以贏得 iPhone 7+ 或 Macbook pro 等 3C 商品大獎。詳情請至 <a href="https://promo-jobs.ho600.com/">https://promo-jobs.ho600.com/</a> 了解。
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="faq" class="container content-section text-left">
+    <section id="faq" class="container reverse-section text-left">
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
@@ -548,6 +541,7 @@
             </div>
         </div>
     </section>
+
     <section id="question" class="container content-section text-left">
         <div class="row">
             <div class="container">
