--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -497,9 +497,9 @@
                 <p class="text-danger">
                     為讓大部份求職者處於公平競爭狀態，請先留個 Email ，並依下列時程收信：
                     <ol class="p">
-                        <li>預計 2016/12/09 公佈第一題考題</li>
-                        <li>預計 2016/12/16 公佈第二題考題</li>
-                        <li>預計 2016/12/23 公佈第三題考題</li>
+                        <li>預計 2016/12/09 寄出第一題考題</li>
+                        <li>預計 2016/12/16 寄出第二題考題</li>
+                        <li>預計 2016/12/23 寄出第三題考題</li>
                         <li>預計 2016/12/24 且登記信箱數達 30 個以上，公佈筆試網站，正式招考</li>
                     </ol>
                 </p>
