--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -360,7 +360,7 @@
                         <li>HTML / CSS</li>
                         <li>Bootstrap</li>
                         <li>javascript + jQuery</li>
-                        <li>Sikuli X</li>
+                        <li>Sikuli X / Selenium</li>
                     </ul>
                     <p>
                         以上工具，創辦人並不是從大學教育中所習得，所以十分了解學歷與上述工具的相關性，招募員工<span class="text-danger">完全不會考慮</span>員工的最高學歷及就學科系為何? 敝公司在乎的是聰明、熱情、認真且</strong><a href="https://zh.wikipedia.org/wiki/%E6%8B%89%E9%87%8C%C2%B7%E6%B2%83%E5%B0%94#.E7.A8.8B.E5.BA.8F.E5.91.98.E7.BE.8E.E5.BE.B7">懶惰</a>的工程師。
