confirmed there were more than 30 registered email addresses

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -500,7 +500,7 @@
                         <li>預計 2016/12/09 寄出第一題考題</li>
                         <li>預計 2016/12/16 寄出第二題考題</li>
                         <li>預計 2016/12/23 寄出第三題考題</li>
-                        <li>預計 2016/12/24 且登記信箱數達 30 個以上，公佈筆試網站，正式招考</li>
+                        <li>預計 2016/12/24 公佈筆試網站，正式招考(己確認超過 30 名登記)</li>
                     </ol>
                 </p>
                 <noscript>請啟用您的 javascript 功能，以便留下 E-mail 。</noscript>
@@ -512,6 +512,9 @@
                   </div>
                   <button type="submit" style="display: none;" class="btn btn-primary click-trigger" function_name="post_email">登記信箱</button>
                 </form>
+                <p class="text-danger">
+                    * 若是在 12/09 後才登記信箱的應聘人，也不用擔心，在下一里程碑上，會一起補上先前的題目，就算是 12/24 後登記也沒關係，可以一次領三題。
+                </p>
             </div>
         </div>
     </section>
