already sent the first exam letter

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -497,7 +497,7 @@
                 <p class="text-danger">
                     為讓大部份求職者處於公平競爭狀態，請先留個 Email ，並依下列時程收信：
                     <ol class="p">
-                        <li>預計 2016/12/09 寄出第一題考題</li>
+                        <li>己於 2016/12/09 18:30 寄出第一題考題</li>
                         <li>預計 2016/12/16 寄出第二題考題</li>
                         <li>預計 2016/12/23 寄出第三題考題</li>
                         <li>預計 2016/12/24 公佈筆試網站，正式招考(己確認超過 30 名登記)</li>
@@ -513,7 +513,7 @@
                   <button type="submit" style="display: none;" class="btn btn-primary click-trigger" function_name="post_email">登記信箱</button>
                 </form>
                 <p class="text-danger">
-                    * 若是在 12/09 後才登記信箱的應聘人，也不用擔心，在下一里程碑上，會一起補上先前的題目，就算是 12/24 後登記也沒關係，可以一次領三題。
+                    * 若是在寄出考題後才登記信箱的應聘人，也不用擔心，在下一里程碑時，會一起補上先前的題目，就算是 12/24 後登記也沒關係，可以一次領三題。
                 </p>
             </div>
         </div>
