--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -337,7 +337,7 @@
                         伺服器皆置於雲端平台，主要是 Amazon AWS 及 Google App Engine 。
                     </p>
                     <p>
-                        工作角色分為三大部份： 系統管理員、後端程式開發員、前端設計師。每一員工皆需擔任此三角色，也就是所謂的「<span class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網頁全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前依序分配為 45%，35%，20% 。然此比例會視公司需要有所調整，並不受限於招募時期所定比例。
+                        工作角色分為三大部份： 系統管理員、後端程式開發員、前端設計師。每一員工皆需擔任此三角色，也就是所謂的「<span class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網站全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前依序分配為 45%，35%，20% 。然此比例會視公司需要有所調整，並不受限於招募時期所定比例。
                     </p>
                     <p>
                         在溝通語言及文件寫作上，主要使用中華民國國語，次要使用英文，少部份使用日文。
