--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -504,7 +504,7 @@
                     為讓大部份求職者處於公平競爭狀態，請先留個 Email ，並依下列時程收信：
                     <ol class="p">
                         <li>己於 2016/12/09 18:30 寄出第一題考題</li>
-                        <li>預計 2016/12/16 寄出第二題考題</li>
+                        <li>己於 2016/12/16 05:00 寄出第二題考題</li>
                         <li>預計 2016/12/23 寄出第三題考題</li>
                         <li>預計 2016/12/24 公佈筆試網站，正式招考(己確認超過 30 名登記)</li>
                     </ol>
