--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -506,21 +506,17 @@
                         <li>己於 2016/12/09 18:30 寄出第一題考題</li>
                         <li>己於 2016/12/16 05:00 寄出第二題考題</li>
                         <li>己於 2016/12/23 23:55 寄出第三題考題</li>
-                        <li>預計 2016/12/24 公佈筆試網站，正式招考(己確認超過 30 名登記)</li>
+                        <li>預計 2016/12/24 公佈筆試網站，目前尚在趕工中</li>
                     </ol>
                 </p>
-                <noscript>請啟用您的 javascript 功能，以便留下 E-mail 。</noscript>
+                <noscript>請啟用您的 javascript 功能，以便申請帳號。</noscript>
                 <form class="form-inline my_form">
                   <div class="form-group">
                     <label class="sr-only" for="exampleInputEmail3">Email</label>
-                    <input type="email" name="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
-                    <input type="hidden" name="type" value="employee" />
+                    <input type="hidden" name="type" value="apply-account-at-exam.yueh-cake.com" />
                   </div>
-                  <button type="submit" style="display: none;" class="btn btn-primary click-trigger" function_name="post_email">登記信箱</button>
+                  <button type="submit" style="display: none;" class="btn btn-primary click-trigger" function_name="post_email">申請應聘帳號</button>
                 </form>
-                <p class="text-danger">
-                    * 若是在寄出考題後才登記信箱的應聘人，也不用擔心，在下一里程碑時，會一起補上先前的題目，就算是 12/24 後登記也沒關係，可以一次領三題。
-                </p>
             </div>
         </div>
     </section>
