only accept rsa key, and must support encrypt and sing

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -464,7 +464,7 @@
                     <h2 class="text-center">流程</h2>
                     <ul class="p">
                         <li>在本網站申請應聘帳號</li>
-                        <li>以該帳號生成 PGP 公私錀，效期需在 360 天以上、 1440 天以下。並妥善保管私錀，因私錀洩露致使筆試成績有誤，恕無法更正。效期即最長答題時間，超過者須重新申請應聘帳號</li>
+                        <li>以該帳號生成 PGP 公私錀，格式需為 RSA ，並支援加密及簽章。並妥善保管私錀，因私錀洩露致使筆試成績有誤，恕無法更正。效期即最長答題時間，超過者須重新申請應聘帳號</li>
                         <li>於 24 小時內上傳<span class="text-danger">公錀</span>至筆試網站，並註冊帳戶</li>
                         <li>至筆試網站寫一封加密信，加密錀匙為上述應聘帳號之 PGP 公錀及 <a href="#">jobs.at.ho600@yueh-cake.com</a> 公錀(ID: )，信件內容為 md5("<span class="text-success">${應聘人之中華民國身份證號後 8 碼數字}</span><span class="text-info">${應聘人之中華民國身份證上載明出生年月日(限數字，無區隔符)}</span><span class="text-success">${應聘人之中華民國身份證上載明發證年月日(限數字，無區隔符)}</span><span class="text-info">${應聘人之中華民國身份證背面之空白身分證流水號(依序*任*選 5 碼)}</span>".replace(/[^0-9]/g, ""))[:<span class="text-danger">14</span>] 之前 <span class="text-danger">14</span> 碼字串。<span class="text-danger">請注意</span>： 是傳 <span class="text-danger">14</span> 碼的 md5 驗證碼，而不是直接傳身份證號及出生年月日，後兩者資訊會觸犯招募限制第 2 條規定，此封信也需經由筆試網站寄出，以個人或他人信箱寄出一樣觸犯招募限制第 2 條規定。此 <span class="text-danger">14</span> 碼的 md5 驗證碼乃用在錄取程序上，屆時應聘者須提出有效之中華民國身份證以示該應聘帳號為其所擁用，如<span class="text-danger">不符者勢難聘用</span>。如應聘人擔心屆時無法拿出此驗證碼所對應的中華民國身份證原件，建議先將它的正反面以高解析相機(手機)拍下，並妥善保存電子檔以供錄取時與新身份證正本一同檢驗</li>
                         <li>
