--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -470,9 +470,24 @@
                         <li>
                             筆試為分次出題，題目總共有 8 題，考題沒有範圍，每題也只有一次答題機會，出題速度依據應聘人的答題品質而定，愈高者出題愈快。其中必出的 3 題如下：
                             <ol class="p">
-                                <li>數學題。欲知考題，可到下方「立即求職」先登記個人信箱</li>
-                                <li>數學題。欲知考題，可到下方「立即求職」先登記個人信箱</li>
-                                <li>數學題。欲知考題，可到下方「立即求職」先登記個人信箱</li>
+                                <li><p>600 是某數學問題的答案，請你推敲、說明「某數學問題」為何? 並以「敝司創辦人智力」為基準，為他列出求解過程。</p>
+                                    <p>「某數學問題」的難度愈高得分愈高，但若超過「敝司創辦人」智力所能理解的部份，那就會沒有分數。</p>
+                                    <p>給個提示，「敝司創辦人」不懂「Riemann integral」。</p>
+                                </li>
+                                <li>
+<p>『議價』對敝下而言是件有點難的任務，所以我喜歡去 IKEA 而不愛去逛那種俗到脫褲的傢俱賣場，害怕買完後，是我被脫褲了。</p>
+<p>人生中總會碰到『面議』這件事，像是買房子。湊巧的是，我們想要買的房子，是親戚的。要談出一個價格對我就是難事了，沒談成反正陌生的彼此也不再見面，還無所謂。</p>
+<p>但現在得跟親戚談，想當然耳，他想出價高，而我想出價低，光是出價就可能影響感情，我出得太低，會不會讓他覺得我想佔他便宜，他出太高了，或許也怕像是要獅子大開口。大家都面臨到一個僵局： 誰要先走第一步?</p>
+<p>於此，若是有一個公正第三人，站在我們中間，買賣雙方把價格告知第三人，如我的買價高於他的賣價，就直接公開雙方的買賣價，我們雙方再就買賣價範圍來『面議』，這樣傷感情的機率就大幅下降；</p>
+<p>若是我的買價低於他的賣價，這樣「第三人」就直接銷毀字條，對我而言，只知道出得不夠高； 對他而言，也只知道出得不夠低，至於高低差多少， 1 塊錢還是 100 萬，都是有可能的。這感情要保全就不是難事。</p>
+<p>然則此法取決於「第三人」有多公正。試想，在買價為 1700 萬，而賣價為 1500 萬時，若第三人有私心，宣佈此次報價未成交，事後再與賣家用 1550 萬購買，最後再用 1650 萬賣給買家，從中套利 100 萬，這兩邊不就成了冤大頭嗎?</p>
+<p>這樣的難題，當然要上博碩網找答案囉~ 結果，我還真的找到解法，但受限於它的數學模型是給研究生看的，我要懂也得花大功夫，親戚要相信我拿這種數學不是要呼嚨他，這難度不亞於解決僵局，況且，懂了數學後，還得寫出程式才能完備整套模型。這其實是搞了別的問題來解決問題。</p>
+<p>我只好眉頭一皺，緊接著一個念頭閃入，自此解決這個僵局。於是，這就成了各位的考題了。</p>
+<p>請提出一套方法、流程或是模型，在不依賴公正第三人(或是單一裝置)的條件下，能判斷買賣雙方的價格是否成交，成交則公開買賣價，未成交則銷毀雙方價格數據，簡單講，在你的方法、流程或是模型中，不能有「一個人」或是「一項裝置」同時得知買價及賣價，但若是你的方法、流程或是模型真得只能依賴一位第三人(或是單一裝置)，那就請提出那人(或裝置)的「公正驗證方法」。而且限定所擬出的方法、流程、模型或是公正驗證方法，不得使用超過一般大學生能懂的數學，所用的數學愈簡單，分數愈高。</p>
+                                </li>
+                                <li>
+                                    <p>In this recruitment web site: We ask you to send the 14-digits md5 code.  Please describe the reason about the 14-digits, why not choose 13-digits or 15-digits or anything else?</p>
+                                </li>
                             </ol>
                             如未答滿 8 題，卻又遲遲未接到新的題目，意謂考試委員<span class="text-danger">十分不滿意</span>您的答案，選擇無限期停問，請勿來信詢問或是催促出題。敝公司開發的筆試網站，保證應聘人必定會拿到試題(前提是您要登入筆試網站)，如未拿到試題，考試委員會接到系統警告，於此，您久久未拿到試題，<span class="text-danger">絕對</span>是考試委員認定您目前的資質不好，請再多自學一陣子，之後再來應聘，反正<span class="text-danger">考試委員也不會知道您的新帳號是與之前那個舊帳號一樣</span>
                         </li>
@@ -500,23 +515,18 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="text-center">求職</h2>
-                <p class="text-danger">
-                    為讓大部份求職者處於公平競爭狀態，請先留個 Email ，並依下列時程收信：
-                    <ol class="p">
-                        <li>己於 2016/12/09 18:30 寄出第一題考題</li>
-                        <li>己於 2016/12/16 05:00 寄出第二題考題</li>
-                        <li>己於 2016/12/23 23:55 寄出第三題考題</li>
-                        <li>預計 2016/12/24 公佈筆試網站，目前尚在趕工中</li>
-                    </ol>
-                </p>
                 <noscript>請啟用您的 javascript 功能，以便申請帳號。</noscript>
                 <form class="form-inline my_form">
                   <div class="form-group">
                     <label class="sr-only" for="exampleInputEmail3">Email</label>
                     <input type="hidden" name="type" value="apply-account-at-exam.yueh-cake.com" />
                   </div>
-                  <button type="submit" style="display: none;" class="btn btn-primary click-trigger" function_name="post_email">申請應聘帳號</button>
+                  <button type="submit" style="display: none;" class="btn btn-primary click-trigger" function_name="post_email">先申請應聘帳號</button>
                 </form>
+                <p class="text-danger">
+                    <br/>
+                    * 再至<a href="https://exam.yueh-cake.com/">筆試網站</a>註冊在此，若想了解它的全貌可至 <a href="https://bitbucket.org/ho600/exam-yueh-cake-com/">bitbucket</a> 。
+                </p>
             </div>
         </div>
     </section>
@@ -537,6 +547,12 @@
                             如果邊際條件不變，那內容也會變嗎?
                             <ul class="p" style="list-style: none;">
                                 <li>會，創辦人說話的保證效力保證低於美國國債，其 AA+ 等級的五年違約機率約為 0.166 %，創辦人自認無法比它還低。而在員工聘用程序中所簽訂的合約，則遵守中華民國法律。</li>
+                            </ul>
+                        </li>
+                        <li>
+                            筆試網站的 PGP 相關問題? 該如何反應?
+                            <ul class="p" style="list-style: none;">
+                                <li>在筆試網站無法註冊或回傳答案時，請以匿名方式在下方留言板留下公錀資訊及發生情形。切勿使用一般通訊軟體來詢問，這樣就會曝露了應聘帳號與真實世界的關係。</li>
                             </ul>
                         </li>
                     </ol>
