remove redundancy words

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -525,7 +525,7 @@
                 </form>
                 <p class="text-danger">
                     <br/>
-                    * 再至<a href="https://exam.yueh-cake.com/">筆試網站</a>註冊在此，若想了解它的全貌可至 <a href="https://bitbucket.org/ho600/exam-yueh-cake-com/">bitbucket</a> 。
+                    * 再至<a href="https://exam.yueh-cake.com/">筆試網站</a>註冊，若想了解它的全貌可至 <a href="https://bitbucket.org/ho600/exam-yueh-cake-com/">bitbucket</a> 。
                 </p>
             </div>
         </div>
