--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -468,7 +468,7 @@
                         <li>於 24 小時內上傳<span class="text-danger">公錀</span>至筆試網站，並註冊帳戶</li>
                         <li>至筆試網站寫一封加密信，加密錀匙為上述應聘帳號之 PGP 公錀及 <a href="#">jobs.at.ho600@yueh-cake.com</a> 公錀(ID: )，信件內容為 md5("<span class="text-success">${應聘人之中華民國身份證號後 8 碼數字}</span><span class="text-info">${應聘人之中華民國身份證上載明出生年月日(限數字，無區隔符)}</span><span class="text-success">${應聘人之中華民國身份證上載明發證年月日(限數字，無區隔符)}</span><span class="text-info">${應聘人之中華民國身份證背面之空白身分證流水號(依序*任*選 5 碼)}</span>".replace(/[^0-9]/g, ""))[:<span class="text-danger">14</span>] 之前 <span class="text-danger">14</span> 碼字串。<span class="text-danger">請注意</span>： 是傳 <span class="text-danger">14</span> 碼的 md5 驗證碼，而不是直接傳身份證號及出生年月日，後兩者資訊會觸犯招募限制第 2 條規定，此封信也需經由筆試網站寄出，以個人或他人信箱寄出一樣觸犯招募限制第 2 條規定。此 <span class="text-danger">14</span> 碼的 md5 驗證碼乃用在錄取程序上，屆時應聘者須提出有效之中華民國身份證以示該應聘帳號為其所擁用，如<span class="text-danger">不符者勢難聘用</span>。如應聘人擔心屆時無法拿出此驗證碼所對應的中華民國身份證原件，建議先將它的正反面以高解析相機(手機)拍下，並妥善保存電子檔以供錄取時與新身份證正本一同檢驗</li>
                         <li>
-                            筆試為分次出題，題目總共有 8 題，考題沒有範圍，每題也只有一次答題機會，出題速度依據應聘人的答題品質而定，愈高者出題愈快。其中必出的 3 題如下：
+                            筆試為分次出題，題目總共有 8 題，考題沒有範圍，每題也只有一次答題機會，出題速度依據應聘人的答題品質而定，愈高者出題愈快。<span class="text-danger">在回傳答案時，請務必考量筆試網站只能透過純文字(且須用應聘帳號私錀簽章)回傳</span>。其中必出的 3 題如下：
                             <ol class="p">
                                 <li><p>600 是某數學問題的答案，請你推敲、說明「某數學問題」為何? 並以「敝司創辦人智力」為基準，為他列出求解過程。</p>
                                     <p>「某數學問題」的難度愈高得分愈高，但若超過「敝司創辦人」智力所能理解的部份，那就會沒有分數。</p>
