--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -506,7 +506,7 @@
                                         會提供一組 AWS 金錀及 ssh 私錀，讓你登入一台 Ubuntu EC2 Instance ，請在該機器內使用 tarball 方式，安裝 nginx/uwsgi 伺服器及用 apt-get 安裝 PostgreSQL 伺服器，並放置上述題目的 Django 網站成果。除了考試委員會從 80 port 去檢查設定成果，另需將登入機器後的 command history 補入題一所生成的儲存庫。
                                     </p>
                                 </li>
-                                <li><p>說說你想要拿那些開放原始碼函式庫來建構什麼樣的網站服務。純打嘴炮，不寫 code 。</p></li>
+                                <li><p>說說你想要拿那些開放原始碼函式庫來建構什麼樣的網站服務。純打嘴炮，不寫 code 。<span class="text-danger">此題並不受「招募限制第二條」規範</span>。也就是說，若在此題答案中有意或無意透露出的資訊，可讓考試委員 Google 到你的個人識別資訊包含但不僅限於電子信箱、部落格、網站、網域、學歷、科系、學校、種族、階級、宗教、黨派、籍貫、出生地、性別、性傾向、年齡、婚姻、容貌、五官、身心障礙或以往工會會員身分者。<span class="text-danger">請注意，是該資訊被拿來 Google ，而不是大刺刺地在答案內載明</span>，因為，當你能回到第 8 題，已表示能力十分充足，只差有沒有願景而已，如果你在應徵敝司工作前，即有抱負，更是大大加分。</p></li>
                             </ol>
                             如未答滿 8 題，卻又遲遲未接到新的題目，意謂考試委員<span class="text-danger">十分不滿意</span>您的答案，選擇無限期停問，請勿來信詢問或是催促出題。敝公司開發的筆試網站，保證應聘人必定會拿到試題(前提是您要登入筆試網站)，如未拿到試題，考試委員會接到系統警告，於此，您久久未拿到試題，<span class="text-danger">絕對</span>是考試委員認定您目前的資質不好，請再多自學一陣子，之後再來應聘，反正<span class="text-danger">考試委員也不會知道您的新帳號是與之前那個舊帳號一樣</span>
                         </li>
